force-app/main/default/objects/E2CP__Configuration_Item__mdt/E2CP__Configuration_Item__mdt.object-meta.xml
<CustomObject>
    <label>Configuration Item</label>
    <pluralLabel>Configuration Items</pluralLabel>
</CustomObject>