force-app/main/default/objects/E2CP__Configuration_Item__mdt/fields/E2CP__Configuration_Section__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Configuration_Section__c</fullName>
    <description>Section that this item belongs to in Email to Case Premium Setup</description>
    <label>Configuration Section</label>
    <referenceTo>E2CP__Configuration_Section__mdt</referenceTo>
    <relationshipLabel>Configuration Items</relationshipLabel>
    <relationshipName>Configuration_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>