force-app/main/default/objects/E2CP__Configuration_Item__mdt/fields/E2CP__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Help_Text__c</fullName>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>