force-app/main/default/objects/E2CP__Configuration_Item__mdt/fields/E2CP__Label__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>