force-app/main/default/objects/E2CP__Configuration_Item__mdt/fields/E2CP__Placeholder__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Placeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A placeholder is used for controlling display on the setup page but will not create a custom setting record</description>
    <label>Placeholder</label>
    <type>Checkbox</type>
</CustomField>