force-app/main/default/objects/E2CP__Configuration_Item__mdt/fields/E2CP__Variations__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Variations__c</fullName>
    <label>Variations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>